--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jshint . && mocha ./test/npm ./test/unit",
-    "install": "cp -u config.js.template config.js",
+    "install": "cp config.js.template config.js",
     "start": "node server.js"
   },
   "repository": {
